# alert_bot

./: Dockerfile  asgi.py  docker-compose.yaml  manage.py  nginx.conf  psql.sql  pyproject.toml  requirements.txt  run.sh  settings.py  urls.py  views.py  wsgi.py
alertBot/: admin.py  apps.py  forms.py  keyboards.py  models.py
alertBot/management/commands/: start.py
alertBot/migrations/: 0001_initial.py  0002_botuser_notify.py
alertBot/service/: bot.py  database.py  youtrack.py
