[tool.poetry]
name = "alertbot"
version = "0.1.0"
description = ""
authors = ["hikmatillo <dolgovdaniil007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
pytelegrambotapi = "^4.11.0"
django-jazzmin = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
